// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Joints > #buildTreeFromLeaf 1`] = `
[
  "F",
  [
    [
      "J",
      [
        [
          "O",
        ],
        [
          "N",
        ],
      ],
    ],
    [
      "I",
      [
        [
          "M",
        ],
      ],
    ],
    [
      "C",
      [
        [
          "G",
          [
            [
              "K",
            ],
            [
              "L",
            ],
          ],
        ],
        [
          "A",
          [
            [
              "B",
              [
                [
                  "E",
                ],
                [
                  "D",
                  [
                    [
                      "H",
                    ],
                  ],
                ],
              ],
            ],
          ],
        ],
      ],
    ],
  ],
]
`;

exports[`Joints > #makeJoints 1`] = `
{
  "A": [
    "C",
    "B",
  ],
  "B": [
    "E",
    "D",
    "A",
  ],
  "C": [
    "F",
    "G",
    "A",
  ],
  "D": [
    "H",
    "B",
  ],
  "E": [
    "B",
  ],
  "F": [
    "J",
    "I",
    "C",
  ],
  "G": [
    "K",
    "L",
    "C",
  ],
  "H": [
    "D",
  ],
  "I": [
    "M",
    "F",
  ],
  "J": [
    "O",
    "N",
    "F",
  ],
  "K": [
    "G",
  ],
  "L": [
    "G",
  ],
  "M": [
    "I",
  ],
  "N": [
    "J",
  ],
  "O": [
    "J",
  ],
}
`;

exports[`Joints > #sortJoints 1`] = `
{
  "A": [
    "B",
    "C",
  ],
  "B": [
    "A",
    "D",
    "E",
  ],
  "C": [
    "A",
    "F",
    "G",
  ],
  "D": [
    "B",
    "H",
  ],
  "E": [
    "B",
  ],
  "F": [
    "C",
    "I",
    "J",
  ],
  "G": [
    "C",
    "K",
    "L",
  ],
  "H": [
    "D",
  ],
  "I": [
    "F",
    "M",
  ],
  "J": [
    "F",
    "N",
    "O",
  ],
  "K": [
    "G",
  ],
  "L": [
    "G",
  ],
  "M": [
    "I",
  ],
  "N": [
    "J",
  ],
  "O": [
    "J",
  ],
}
`;

exports[`Joints > #sortTree 1`] = `
[
  "A",
  [
    [
      "B",
      [
        [
          "D",
          [
            [
              "H",
            ],
          ],
        ],
        [
          "E",
        ],
      ],
    ],
    [
      "C",
      [
        [
          "F",
          [
            [
              "I",
              [
                [
                  "M",
                ],
              ],
            ],
            [
              "J",
              [
                [
                  "N",
                ],
                [
                  "O",
                ],
              ],
            ],
          ],
        ],
        [
          "G",
          [
            [
              "K",
            ],
            [
              "L",
            ],
          ],
        ],
      ],
    ],
  ],
]
`;

exports[`Joints > #sortTree with duplicate leafs 1`] = `
[
  "B",
  [
    [
      "A",
      [
        [
          "B",
          [
            [
              "D",
            ],
          ],
        ],
        [
          "C",
          [
            [
              "E",
            ],
            [
              "F",
            ],
          ],
        ],
      ],
    ],
    [
      "D",
    ],
  ],
]
`;
